--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,18 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <form class="search-form" id="search-form">
-      <input
-        type="text"
-        name="searchQuery"
-        autocomplete="off"
-        placeholder="Search images..."
-      />
-      <button type="submit">Search</button>
-    </form>
+    <div class="container">
+      <form class="search-form" id="search-form">
+        <input
+          class="inpute"
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button type="submit" class="submitBtn">Search</button>
+      </form>
+    </div>
     <section class="gallery-container">
       <div class="gallery"></div>
       <button type="button" class="btn-load-more is-hidden">Load more</button>
