добавил кнопку на верх

--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,11 @@
         <button type="submit" class="submitBtn">Search</button>
       </form>
     </div>
+
     <section class="gallery-container">
       <div class="gallery"></div>
       <button type="button" class="btn-load-more is-hidden">Load more</button>
+      <div id="arrowTop" hidden></div>
     </section>
     <include src="./partials/example.html"></include>
   </body>
